# sharkey.rs

./: .gitignore  Cargo.toml  README.markdown
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
src/modules/: actions.rs  aux.rs  bridge.rs  enums.rs  error.rs  info.rs  mod.rs  network.rs  payloads.rs  responses.rs  tests.rs
